--- a/xem-phim-bo/doi-dac-vu-pha-an/index.html
+++ b/xem-phim-bo/doi-dac-vu-pha-an/index.html
@@ -1187,7 +1187,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             3
+             4
             </dd>
             <br/>
            </dl>
@@ -1690,7 +1690,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Angel Guts: Red Classroom
             </span>
             <span class="list-top-movie-item-view">
-             49 lượt xem
+             51 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1711,18 +1711,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/bac-thay-thit-nuong-phan-2" title="Bậc thầy thịt nướng (Phần 2)">
+          <a class="list-top-movie-link" href="/phim-moi/xoi-hai-em-khach-tro-xinh-dep" title="Xơi Hai Em Khách Trọ Xinh Đẹp">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bac-thay-thit-nuong-phan-2-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/xoi-hai-em-khach-tro-xinh-dep-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Bậc thầy thịt nướng (Phần 2)
+             Xơi Hai Em Khách Trọ Xinh Đẹp
             </span>
             <span class="list-top-movie-item-en">
-             Barbecue Showdown (Season 2)
+             펜션손님과 그룹섹스
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/amityville-quy-du-thuc-tinh" title="Amityville: Quỷ Dữ Thức Tỉnh">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/amityville-quy-du-thuc-tinh-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Amityville: Quỷ Dữ Thức Tỉnh
+            </span>
+            <span class="list-top-movie-item-en">
+             Amityville: The Awakening
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1733,18 +1755,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/dieu-tuyet-voi-nhat-cua-chung-ta-ban-dien-anh" title="Điều Tuyệt Vời Nhất Của Chúng Ta (Bản Điện Ảnh)">
+          <a class="list-top-movie-link" href="/phim-moi/vung-huy-diet" title="Vùng hủy diệt">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dieu-tuyet-voi-nhat-cua-chung-ta-ban-dien-anh-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vung-huy-diet-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Điều Tuyệt Vời Nhất Của Chúng Ta (Bản Điện Ảnh)
+             Vùng hủy diệt
             </span>
             <span class="list-top-movie-item-en">
-             My Best Summer
+             Annihilation
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1755,21 +1777,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/kinh-thien-dai-nghich-chuyen" title="Kinh Thiên Đại Nghịch Chuyển">
+          <a class="list-top-movie-link" href="/phim-moi/tien-nghich" title="Tiên Nghịch">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/kinh-thien-dai-nghich-chuyen-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tien-nghich-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Kinh Thiên Đại Nghịch Chuyển
+             Tiên Nghịch
             </span>
             <span class="list-top-movie-item-en">
-             Tik Tok
+             Renegade Immortal
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             6 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1777,43 +1799,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/am-anh-yeu-va-do-ki" title="Ám ảnh, yêu và đố kị">
+          <a class="list-top-movie-link" href="/phim-moi/kiem-vuong-trieu-cuu-canh-truong-sinh" title="Kiếm Vương Triều: Cửu Cảnh Trường Sinh">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/am-anh,-yeu-va-do-ki-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/kiem-vuong-trieu-cuu-canh-truong-sinh-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Ám ảnh, yêu và đố kị
+             Kiếm Vương Triều: Cửu Cảnh Trường Sinh
             </span>
             <span class="list-top-movie-item-en">
-             Obsession
+             Sword Dynasty: Messy Inn
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/lanh-an-phan-4" title="Lãnh Án (Phần 4)">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/lanh-an-phan-4-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Lãnh Án (Phần 4)
-            </span>
-            <span class="list-top-movie-item-en">
-             Cold Case (Season 4)
-            </span>
-            <span class="list-top-movie-item-view">
-             0 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
