add new website from server na

--- a/xem-phim-bo/doi-dac-vu-pha-an/index.html
+++ b/xem-phim-bo/doi-dac-vu-pha-an/index.html
@@ -1187,7 +1187,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             4
+             5
             </dd>
             <br/>
            </dl>
@@ -1711,21 +1711,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/xoi-hai-em-khach-tro-xinh-dep" title="Xơi Hai Em Khách Trọ Xinh Đẹp">
+          <a class="list-top-movie-link" href="/phim-moi/su-huy-diet-phan-1" title="Sự Hủy Diệt (Phần 1)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/xoi-hai-em-khach-tro-xinh-dep-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/su-huy-diet-phan-1-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Xơi Hai Em Khách Trọ Xinh Đẹp
+             Sự Hủy Diệt (Phần 1)
             </span>
             <span class="list-top-movie-item-en">
-             펜션손님과 그룹섹스
+             Star Trek: Picard (Season 1)
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1733,18 +1733,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/amityville-quy-du-thuc-tinh" title="Amityville: Quỷ Dữ Thức Tỉnh">
+          <a class="list-top-movie-link" href="/phim-moi/vong-tron-oan-nghiet" title="Vòng Tròn Oan Nghiệt">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/amityville-quy-du-thuc-tinh-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vong-tron-oan-nghiet-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Amityville: Quỷ Dữ Thức Tỉnh
+             Vòng Tròn Oan Nghiệt
             </span>
             <span class="list-top-movie-item-en">
-             Amityville: The Awakening
+             Ringu
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1755,18 +1755,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/vung-huy-diet" title="Vùng hủy diệt">
+          <a class="list-top-movie-link" href="/phim-moi/do-ki" title="Đố kị">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vung-huy-diet-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/do-ki-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Vùng hủy diệt
+             Đố kị
             </span>
             <span class="list-top-movie-item-en">
-             Annihilation
+             Envious
+            </span>
+            <span class="list-top-movie-item-view">
+             4 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/u-lang-la-bo-bac" title="U Lăng La Bố Bạc">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/u-lang-la-bo-bac-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             U Lăng La Bố Bạc
+            </span>
+            <span class="list-top-movie-item-en">
+             Lop Nor Tomb
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1777,43 +1799,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tien-nghich" title="Tiên Nghịch">
+          <a class="list-top-movie-link" href="/phim-moi/nghi-pham-thu-tam" title="Nghi Phạm Thứ Tám">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tien-nghich-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nghi-pham-thu-tam-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Tiên Nghịch
+             Nghi Phạm Thứ Tám
             </span>
             <span class="list-top-movie-item-en">
-             Renegade Immortal
+             Dust To Dust
             </span>
             <span class="list-top-movie-item-view">
-             6 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/kiem-vuong-trieu-cuu-canh-truong-sinh" title="Kiếm Vương Triều: Cửu Cảnh Trường Sinh">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/kiem-vuong-trieu-cuu-canh-truong-sinh-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Kiếm Vương Triều: Cửu Cảnh Trường Sinh
-            </span>
-            <span class="list-top-movie-item-en">
-             Sword Dynasty: Messy Inn
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
